[gd_scene load_steps=20 format=2]

[ext_resource path="res://ui/HUD.gd" type="Script" id=1]
[ext_resource path="res://ui/font/chawp55.font" type="BitmapFont" id=2]
[ext_resource path="res://ui/font/chawp20.font" type="BitmapFont" id=3]
[ext_resource path="res://anim/ui/close-button.png" type="Texture" id=4]
[ext_resource path="res://anim/godot-icon.png" type="Texture" id=5]
[ext_resource path="res://anim/nylnook-avatar.png" type="Texture" id=6]
[ext_resource path="res://anim/ui/cartridge.png" type="Texture" id=7]
[ext_resource path="res://anim/ui/music-play.png" type="Texture" id=8]
[ext_resource path="res://anim/ui/music-stop.png" type="Texture" id=9]
[ext_resource path="res://anim/ui/credits-closed.png" type="Texture" id=10]
[ext_resource path="res://anim/ui/credits-opened.png" type="Texture" id=11]
[ext_resource path="res://anim/ui/fullscreen.png" type="Texture" id=12]
[ext_resource path="res://anim/ui/window.png" type="Texture" id=13]
[ext_resource path="res://anim/ui/quit.png" type="Texture" id=14]
[ext_resource path="res://anim/ui/config.png" type="Texture" id=15]
[ext_resource path="res://anim/ui/english-mini.png" type="Texture" id=16]
[ext_resource path="res://anim/ui/french-mini.png" type="Texture" id=17]

[sub_resource type="Animation" id=1]

resource_name = "config_down"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Config:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -300 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Config/ConfigTextureButton:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 360.0, 0.0 ]
}

[sub_resource type="Animation" id=2]

resource_name = "config_up"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Config:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -300 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Config/ConfigTextureButton:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="HUD" type="Node2D"]

script = ExtResource( 1 )

[node name="ConfigAnimationPlayer" type="AnimationPlayer" parent="."]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/config_down = SubResource( 1 )
anims/config_up = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="CanvasLayer" type="CanvasLayer" parent="."]

layer = 2
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="Credits" type="Container" parent="CanvasLayer"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Credits"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 1 )
_sections_unfolded = [ "Rect" ]

[node name="title" type="Label" parent="CanvasLayer/Credits"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 39.0
margin_right = 1280.0
margin_bottom = 101.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "TITLE"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts" ]

[node name="by" type="Label" parent="CanvasLayer/Credits"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 115.0
margin_right = 1280.0
margin_bottom = 139.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "BY"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts" ]

[node name="License" type="Label" parent="CanvasLayer/Credits"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 143.0
margin_right = 1280.0
margin_bottom = 167.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "LICENSE"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts" ]

[node name="License url" type="Label" parent="CanvasLayer/Credits"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 170.0
margin_right = 1280.0
margin_bottom = 194.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "LICENSE_URL"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts" ]

[node name="Music" type="Label" parent="CanvasLayer/Credits"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -1.0
margin_top = 216.0
margin_right = 1279.0
margin_bottom = 240.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "MUSIC"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts" ]

[node name="Music name" type="Label" parent="CanvasLayer/Credits"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -1.0
margin_top = 242.0
margin_right = 1279.0
margin_bottom = 266.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "MUSIC_NAME"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts" ]

[node name="Music license" type="Label" parent="CanvasLayer/Credits"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -1.0
margin_top = 268.0
margin_right = 1279.0
margin_bottom = 292.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "MUSIC_LICENSE"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts" ]

[node name="Music license url" type="Label" parent="CanvasLayer/Credits"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -1.0
margin_top = 295.0
margin_right = 1279.0
margin_bottom = 319.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "MUSIC_LICENSE_URL"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts" ]

[node name="Font" type="Label" parent="CanvasLayer/Credits"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -1.0
margin_top = 345.0
margin_right = 1279.0
margin_bottom = 369.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "FONT"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts" ]

[node name="Font by" type="Label" parent="CanvasLayer/Credits"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -1.0
margin_top = 370.0
margin_right = 1279.0
margin_bottom = 394.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "FONT_BY"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts" ]

[node name="Made with" type="Label" parent="CanvasLayer/Credits"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -1.0
margin_top = 428.0
margin_right = 1279.0
margin_bottom = 452.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "MADE_WITH"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts" ]

[node name="Made for" type="Label" parent="CanvasLayer/Credits"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -1.0
margin_top = 457.0
margin_right = 1279.0
margin_bottom = 481.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "MADE_FOR"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts" ]

[node name="Thanks" type="Label" parent="CanvasLayer/Credits"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -1.0
margin_top = 513.0
margin_right = 1279.0
margin_bottom = 537.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "THANKS"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts" ]

[node name="Thanks bis" type="Label" parent="CanvasLayer/Credits"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -1.0
margin_top = 541.0
margin_right = 1279.0
margin_bottom = 565.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "THANKS_BIS"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts" ]

[node name="CloseTextureButton" type="TextureButton" parent="CanvasLayer/Credits"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 950.0
margin_top = 30.0
margin_right = 1021.0
margin_bottom = 107.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
_sections_unfolded = [ "Textures" ]

[node name="Godot" type="Sprite" parent="CanvasLayer/Credits"]

position = Vector2( 640, 642.425 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="nylnook" type="Sprite" parent="CanvasLayer/Credits"]

position = Vector2( 342.866, 149.832 )
texture = ExtResource( 6 )

[node name="Config" type="Container" parent="CanvasLayer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="Cartridge" type="Sprite" parent="CanvasLayer/Config"]

position = Vector2( 79.9309, 822.098 )
texture = ExtResource( 7 )

[node name="MusicTextureButton" type="TextureButton" parent="CanvasLayer/Config"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 53.0
margin_top = 885.0
margin_right = 112.0
margin_bottom = 945.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="CreditsTextureButton" type="TextureButton" parent="CanvasLayer/Config"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 53.0
margin_top = 771.0
margin_right = 110.0
margin_bottom = 825.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 11 )
_sections_unfolded = [ "Textures" ]

[node name="FullscreenTextureButton" type="TextureButton" parent="CanvasLayer/Config"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 53.0
margin_top = 826.0
margin_right = 111.0
margin_bottom = 885.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )
_sections_unfolded = [ "Textures" ]

[node name="QuitTextureButton" type="TextureButton" parent="CanvasLayer/Config"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 49.0
margin_top = 944.0
margin_right = 112.0
margin_bottom = 1007.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 14 )
_sections_unfolded = [ "Textures" ]

[node name="ConfigTextureButton" type="TextureButton" parent="CanvasLayer/Config"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 31.0
margin_top = 600.0
margin_right = 130.0
margin_bottom = 700.0
rect_pivot_offset = Vector2( 47.7057, 52.4059 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 15 )
stretch_mode = 2
_sections_unfolded = [ "Rect", "Textures" ]

[node name="LangTextureButton" type="TextureButton" parent="CanvasLayer/Config"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 52.0
margin_top = 721.0
margin_right = 113.0
margin_bottom = 762.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 17 )
_sections_unfolded = [ "Textures" ]

[node name="DebugLoadProgressBar" type="ProgressBar" parent="."]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 93.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 0
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
percent_visible = true

[connection signal="pressed" from="CanvasLayer/Credits/CloseTextureButton" to="." method="_on_CloseTextureButton_pressed"]

[connection signal="mouse_exited" from="CanvasLayer/Config" to="." method="_on_Config_mouse_exited"]

[connection signal="toggled" from="CanvasLayer/Config/MusicTextureButton" to="." method="_on_MusicTextureButton_toggled"]

[connection signal="toggled" from="CanvasLayer/Config/CreditsTextureButton" to="." method="_on_CreditsTextureButton_toggled"]

[connection signal="toggled" from="CanvasLayer/Config/FullscreenTextureButton" to="." method="_on_FullscreenTextureButton_toggled"]

[connection signal="pressed" from="CanvasLayer/Config/QuitTextureButton" to="." method="_on_QuitTextureButton_pressed"]

[connection signal="pressed" from="CanvasLayer/Config/ConfigTextureButton" to="." method="_on_ConfigTextureButton_pressed"]

[connection signal="toggled" from="CanvasLayer/Config/LangTextureButton" to="." method="_on_LangTextureButton_toggled"]


